# moneywright

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  package.json
.docs/: ai-chat-implementation.md  dashboard-enhancements.md  desktop-tray-app-plan.md  edd-auth-profile.md  edd-statements.md  investment-parsing-plan.md  prd.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-desktop.yml  docker.yml  release-binaries.yml  release-desktop.yml  release.yml
apps/api/: .env.example  drizzle.config.ts  eslint.config.js  package.json
apps/api/.devtools/: generations.json
apps/api/scripts/: build.ts
apps/api/src/: index.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  server.rs  tray.rs  updater.rs
apps/desktop/ui/: index.html
apps/docs/: .env.example  biome.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/docs/public/: install.ps1  install.sh  robots.txt
apps/mockdocs/: .gitignore  package.json  tsconfig.json
apps/web/: eslint.config.js  index.html  package.json  vite.config.ts
docs/plans/: 2026-01-29-loans-feature-design.md
scripts/: build-binary.sh  build-desktop.sh  generate-update-manifest.sh  release.sh  setup.sh  sync-install-scripts.sh
(+340 files in other folders)
