[package]
name = "moneywright-desktop"
version = "0.1.0"
description = "Moneywright Desktop - Personal finance manager"
authors = ["Moneywright"]
edition = "2021"

[lib]
name = "moneywright_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
dirs = "6"

